test/syntaxerrors/TestThreeErrors.jdc
int x = 10

if (x == 10) {
   println(x;
